<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <ScrollView
            android:id="@+id/scrollview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#CCC9C9"
            android:visibility="visible">

            <LinearLayout
                android:id="@+id/input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"

                android:padding="20dp"
                android:visibility="visible">

                <TextView
                    android:id="@+id/greeting_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/aclonica"
                    android:text="@string/greeting"
                    android:textAlignment="center"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/name_text"
                    style="@style/text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="monospace"
                    android:text="@string/name"
                    android:textColor="#000000" />

                <EditText
                    android:id="@+id/name_editText"
                    style="@style/text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/name_hint"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/nickname_text"
                    style="@style/text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nickname" />

                <EditText
                    android:id="@+id/nickname_editText"
                    style="@style/text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/nickname_hint"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/age_text"
                    style="@style/text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/age" />

                <EditText
                    android:id="@+id/age_editText"
                    style="@style/text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/age_hint"
                    android:importantForAutofill="no"
                    android:inputType="number" />

                <TextView
                    android:id="@+id/bday_textView"
                    style="@style/text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bday" />

                <EditText
                    android:id="@+id/bday_editText"
                    style="@style/text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/bday_hint"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/course_textView"
                    style="@style/text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/course" />

                <EditText
                    android:id="@+id/course_editText"
                    style="@style/text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/course_hint"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/number_textView"
                    style="@style/text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/number" />

                <EditText
                    android:id="@+id/number_editText"
                    style="@style/text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/number_hint"
                    android:importantForAutofill="no"
                    android:inputType="phone" />

                <TextView
                    android:id="@+id/color_textView"
                    style="@style/text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/color" />

                <EditText
                    android:id="@+id/color_editText"
                    style="@style/text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/color_hint"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/dream_textView"
                    style="@style/text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dream" />

                <EditText
                    android:id="@+id/dream_editText"
                    style="@style/text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/dream_hint"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/crush_textView"
                    style="@style/text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/crush" />

                <EditText
                    android:id="@+id/crush_editText"
                    style="@style/text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/crush_hint"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/mesage_textView"
                    style="@style/text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/message" />

                <EditText
                    android:id="@+id/message_editText"
                    style="@style/text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:gravity="start|top"
                    android:hint="@string/message_hint"
                    android:importantForAutofill="no"
                    android:inputType="textMultiLine" />

                <Button
                    android:id="@+id/done_button"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/done" />

            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:id="@+id/result_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name_textView"
                style="@style/result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/nickname_textView"
                style="@style/result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/age_textView"
                style="@style/result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/thanks_textView"
                style="@style/result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Thank you for answering!" />
        </LinearLayout>
    </LinearLayout>
</layout>